api quase pronta faltando terminar swagger